{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "e26ade35-fa3b-462c-a856-19cedea34a61",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "c2e15d6c-9e43-4b25-86a5-fdfb0f4d208f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a04330b6-5e3c-42ca-a294-3bfb107f1028",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "087b4d36-ee07-4b0f-a2fc-c5342734492b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "32979a68-d18d-4493-b5c3-49a9237084d3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UseAbility",
                    "type": "Button",
                    "id": "dcdee802-1531-4cc5-937a-f05798b39aee",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UseActive",
                    "type": "Button",
                    "id": "e80adab4-84d8-4f34-9f85-3e3b720262a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "ef458cbf-4d09-40a9-806e-891459fd321f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DropWeapon",
                    "type": "Button",
                    "id": "2281d46b-3ba4-4de4-a399-a10cbed6c907",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "eced8be8-5414-42f2-afdc-b92a7e82388a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Release",
                    "type": "Button",
                    "id": "b89cb5a0-90d7-4a51-9f9b-3104da373d87",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d10c6070-e2c3-4227-91cc-b9b96dd5ca7f",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c88124d8-89f8-4ee2-a78b-af914ad641d3",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "583b490c-f320-403a-888f-195a596435e1",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21f84aae-0948-4050-a049-bc48b523211d",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ffa0ec3-2888-40d1-8ff5-e8eefe90bb3c",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c258762-375f-43a7-a472-d8b01809a568",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseActive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5aebaa09-50b3-4e4a-998c-a41b066fa8ad",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85511ee0-8036-48a7-a0b7-843db47a0241",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7057b57d-a5b2-4968-bff8-085fd6c17e9d",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0dfc7e37-6ebf-4d76-ae3d-470c0a3acacc",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Release",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "5f15e7b5-1a15-4a8c-840b-650587bf79c6",
            "actions": [
                {
                    "name": "Cycle",
                    "type": "Value",
                    "id": "517bc54b-dbf7-40da-8d27-6653def4dadf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DropItem",
                    "type": "Button",
                    "id": "8390ea40-1312-4751-b35e-e19889bb41d9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CloseInventory",
                    "type": "Button",
                    "id": "d6f27193-ab4b-4b1d-9272-50d7db544b14",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "bd9e6015-f2fe-47d3-8fd2-d5d9ec5340a6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Value",
                    "id": "e7b9f77a-1e7d-4651-9312-a785c1499db9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "52ba643f-8780-47f9-a012-4966b196135b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "994496ae-ca8b-44f2-bd94-08537411b620",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cycle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b48dac3a-584c-4d5e-a979-c3a76354670e",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "658fbd3e-6573-42f5-a562-cbf5c4d5e5a8",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edfc3abf-8ee2-4920-a4f1-5707180e0598",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7c07e59-993b-41b3-b9d9-653b9b7b1417",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32466f13-098d-45df-afdb-2b87c15e092f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Pause",
            "id": "79d2bcb6-f47d-4cf7-8504-301ce6ee20c9",
            "actions": [
                {
                    "name": "Unpause",
                    "type": "Button",
                    "id": "d28302d9-6238-4ff5-94dc-35bb175f08ae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "ca717a8a-6ec2-442f-bea4-d6d264465060",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "f3984ec4-af20-47f2-8636-290ec7e10773",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Choose",
                    "type": "Button",
                    "id": "644cff95-a269-4e26-892e-f732e566ca99",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ac8a840c-fae9-4766-bf8b-1531bd58972c",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Unpause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c77c62d-908e-4049-8a21-f65d50bb05b9",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "029ca4af-40b1-4767-bc53-d34e62319850",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f3756c2-f6ff-4f13-aaeb-7c03fa0edc4a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Choose",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "End",
            "id": "5b6c42ed-c3b5-4ae8-a74e-097328f17b8e",
            "actions": [
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "453401b8-70a7-4f7a-b89c-1662793fec25",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "12f08944-886c-47b9-9fbb-a20884545247",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "97e5c4b5-a8d6-4cb4-bb80-300589d55fec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "463e1e40-ccdb-407e-b9b5-1fecf567d5c2",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e054d85-ec65-410b-9adc-6e7d165e98d3",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae90fe2f-a00f-4eea-a787-2040e92a2b69",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}